[TEST] maven multi stage dockerfile test